# safenutrikids

./: LICENSE  README.md  pyproject.toml
ai-prompts/: README.md
localisation/: README.md
localisation/examples/01-localisation-basic/: README.md  hydration_example.json  localisation_basic_example.py
localisation/reference/: README.md  dietary_attributes.v1.0.csv  dietary_attributes.v1.0.json  regional_countries_europe.v1.0.csv  regional_countries_europe.v1.0.json  regional_languages_europe.v1.0.csv  regional_languages_europe.v1.0.json
localisation/schemas/: variant-schema.v1.0.json
localisation/tests/: __init__.py  test_localisation_basic.py  test_variant_schema.py
parental-access/: README.md
src/safenutrikids/localisation/: __init__.py  localiser.py  models.py
