[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safenutrikids"
version = "0.1.0"
description = "SafenutriKids localisation utilities and parental access guidelines"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
  { name = "SafenutriKids / DRG4FOOD team" }
]

# Adjust these once you're sure which libs you actually use
dependencies = [
  "jsonschema>=4.0.0",
  # "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/DRG4FOOD/safenutrikids"
"Bug Tracker" = "https://github.com/DRG4FOOD/safenutrikids/issues"

[tool.setuptools.packages.find]
where = ["src"]